--- a/imprint/index.html
+++ b/imprint/index.html
@@ -73,10 +73,10 @@
 {
   "@context": "https://schema.org",
   "@type": "BreadcrumbList",
-  "itemListElement": [
+  "itemListElement": [, 
     {
       "@type": "ListItem",
-      "position":  1 ,
+      "position":  2 ,
       "name": "Imprint",
       "item": "https://tgzy.github.io/imprint/"
     }
@@ -129,7 +129,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://tgzy.github.io/" accesskey="h" title="My New Hugo Site (Alt + H)">My New Hugo Site</a>
+            <a href="https://tgzy.github.io" accesskey="h" title="My New Hugo Site (Alt + H)">My New Hugo Site</a>
             <span class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
@@ -180,7 +180,7 @@
     </main>
     
 <footer class="footer">
-    <span>&copy; 2022 <a href="https://tgzy.github.io/">My New Hugo Site</a></span>
+    <span>&copy; 2022 <a href="https://tgzy.github.io">My New Hugo Site</a></span>
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
