--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   "@context": "https://schema.org",
   "@type": "Organization",
   "name": "My New Hugo Site",
-  "url": "https://tgzy.github.io/",
+  "url": "https://tgzy.github.io",
   "description": "",
   "thumbnailUrl": "https://tgzy.github.io/favicon.ico",
   "sameAs": [
@@ -95,7 +95,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://tgzy.github.io/" accesskey="h" title="My New Hugo Site (Alt + H)">My New Hugo Site</a>
+            <a href="https://tgzy.github.io" accesskey="h" title="My New Hugo Site (Alt + H)">My New Hugo Site</a>
             <span class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
@@ -151,7 +151,7 @@
     </main>
     
 <footer class="footer">
-    <span>&copy; 2022 <a href="https://tgzy.github.io/">My New Hugo Site</a></span>
+    <span>&copy; 2022 <a href="https://tgzy.github.io">My New Hugo Site</a></span>
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
