--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 </a>
 </li>
 <li>
-<a href=https://example.org title=example.org>
-<span>example.org</span>
+<a href=https://tgzy.github.io/posts/imprint/ title=imprint/Impressum>
+<span>imprint/Impressum</span>
 </a>
 </li>
 </ul>
