Added another post

--- a/index.html
+++ b/index.html
@@ -87,6 +87,17 @@
 </article>
 <article class=post-entry>
 <header class=entry-header>
+<h2>Hugo_post
+</h2>
+</header>
+<section class=entry-content>
+<p></p>
+</section>
+<footer class=entry-footer><span title="2022-01-30 22:01:48 +0100 CET">January 30, 2022</span>&nbsp;·&nbsp;0 min&nbsp;·&nbsp;Me</footer>
+<a class=entry-link aria-label="post link to Hugo_post" href=https://tgzy.github.io/posts/hugo_post/></a>
+</article>
+<article class=post-entry>
+<header class=entry-header>
 <h2>What_to_do
 </h2>
 </header>
