Added lorem ipsum

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ Desc Text.
 <h1 class=title><a href=/posts/what_to_do/>What_to_do</a></h1>
 <time>Jan 30, 2022</time>
 <br><div class=description>
-What to do? &mldr;
+What to do? Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.&mldr;
 </div>
 <a href=/posts/what_to_do/>Read more ⟶</a>
 </section>
