Switched to PaperMod

--- a/404.html
+++ b/404.html
@@ -27,7 +27,7 @@
 </noscript><meta property="og:title" content="404 Page not found">
 <meta property="og:description" content="ExampleSite description">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://tgzy.github.io/404.html"><meta property="og:image" content="https://tgzy.github.io/%3Clink%20or%20path%20of%20image%20for%20opengraph,%20twitter-cards%3E"><meta property="og:site_name" content="ExampleSite">
+<meta property="og:url" content="https://tgzy.github.io/404.html"><meta property="og:image" content="https://tgzy.github.io/%3Clink%20or%20path%20of%20image%20for%20opengraph,%20twitter-cards%3E"><meta property="og:site_name" content="Tgzy's Test Site">
 <meta name=twitter:card content="summary_large_image">
 <meta name=twitter:image content="https://tgzy.github.io/%3Clink%20or%20path%20of%20image%20for%20opengraph,%20twitter-cards%3E">
 <meta name=twitter:title content="404 Page not found">
