--- a/podcast/index.html
+++ b/podcast/index.html
@@ -82,7 +82,7 @@
 </h2>
 </header>
 <section class=entry-content>
-<p>{{ .Title }} </p>
+<p>My own podcast </p>
 </section>
 <footer class=entry-footer><span title="2022-02-07 09:36:15 +0100 CET">February 7, 2022</span>&nbsp;·&nbsp;1 min&nbsp;·&nbsp;Me</footer>
 <a class=entry-link aria-label="post link to S1e1_my Own Podcast" href=https://tgzy.github.io/podcast/s1e1_my-own-podcast/></a>
