--- a/podcast/s1e2_my-second-podcast/index.html
+++ b/podcast/s1e2_my-second-podcast/index.html
@@ -74,7 +74,7 @@ S1e2_my Second Podcast
 <div class=post-meta><span title="2022-02-07 09:49:03 +0100 CET">February 7, 2022</span>&nbsp;·&nbsp;1 min&nbsp;·&nbsp;Me&nbsp;|&nbsp;<a href=https://github.com/tgzy/tgzy_hugo/tree/main/content/podcast/s1e2_my-second-podcast.md rel="noopener noreferrer" target=_blank>Suggest Changes</a>
 </div>
 </header>
-<div class=post-content><h1 id=h1my-second-podcasth1>My Second Podcast<a hidden class=anchor aria-hidden=true href=#h1my-second-podcasth1>#</a></h1>
+<div class=post-content><h2 id=my-second-podcast>My Second Podcast<a hidden class=anchor aria-hidden=true href=#my-second-podcast>#</a></h2>
 <p>See this link to listen to our newest one.</p>
 </div>
 <footer class=post-footer>
