Added podcast to menu

--- a/podcast/index.html
+++ b/podcast/index.html
@@ -58,6 +58,11 @@
 <span>tags</span>
 </a>
 </li>
+<li>
+<a href=https://tgzy.github.io/podcast/ title="all of our podcasts">
+<span class=active>all of our podcasts</span>
+</a>
+</li>
 </ul>
 </nav>
 </header>
