--- a/404.html
+++ b/404.html
@@ -56,6 +56,11 @@
 <span>tags</span>
 </a>
 </li>
+<li>
+<a href=https://tgzy.github.io/podcast/ title="all of our podcasts">
+<span>all of our podcasts</span>
+</a>
+</li>
 </ul>
 </nav>
 </header>
